# nyc-subway-sign

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  subway-stations.csv
.github/workflows/: unit-test.yaml
app/: main.py
app/models/: __init__.py  arrival.py  direction.py  feed.py  route.py  stop.py  times_request.py
app/models/mta_feed/: feed.py  stop.py  subway_system.py
app/service/: __init__.py  feed_parser.py  feeds.py  stop_times.py  subway_system.py
app/utils/: __init__.py
backend/: Dockerfile  Dockerfile.tests  pyproject.toml
backend/app/: main.py
backend/app/models/: arrival.py  feed.py
backend/app/service/: feeds.py  stop_times.py
backend/metadata/: constants.py
backend/tests/: test-subway-stations.csv  test_feeds.py  test_main.py  test_service.py  test_stop_times.py  test_subway_system.py
frontend/: Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/fonts/: tom-thumb.bdf
frontend/src/: colors.ts  index.ts  sign-test.ts  utils.ts
frontend/src/__tests__/: utils.test.ts
frontend/src/api/: api.ts
frontend/src/display/: colors.ts  matrix.ts  utils.ts
metadata/: constants.py  subway-stations.csv
